--- a/README
+++ b/README
@@ -7,6 +7,8 @@ If running on Windows, you'll probably need to install Python. If running most l
 == Usage ==
 To use this software, you'll need to import it into your python program. (using "import tybot" with tybot.py in the same directory)
 
+You can then create a tybot object using the code mw = new tybot(username, password, link to wiki (i.e. http://wiki.example.com))
+
 == License ==
 This program is licensed under the GNU General Public License (GPL) version 3. The full text of the license can be found in the "LICENSE" file provided in the source code.
 
